--- a/content/book/10.md
+++ b/content/book/10.md
@@ -2,4 +2,5 @@
 title: '10. Эпизодическое объектно-ориентированное программирование'
 metaDescription: 'Учебник'
 metaTitle: 'Учебник'
+type: 'chapter-heading'
 ---
