--- a/content/book/11.md
+++ b/content/book/11.md
@@ -2,4 +2,5 @@
 title: '11. Тотальное объектно-ориентированное программирование'
 metaDescription: 'Учебник'
 metaTitle: 'Учебник'
+type: 'chapter-heading'
 ---
