--- a/content/book/5.md
+++ b/content/book/5.md
@@ -2,4 +2,5 @@
 title: '5. Модульное проектирование алгоритма и данных'
 metaDescription: 'Учебник'
 metaTitle: 'Учебник'
+type: 'chapter-heading'
 ---
