changed image format

--- a/content/book/1/1.1.md
+++ b/content/book/1/1.1.md
@@ -12,7 +12,7 @@ metaDescription: "This is the meta description for this page"
 
 В самых общих чертах **алгоритм – это однозначное описание порядка \(последовательности\) выполнения действий из заданного набора, позволяющее получить требуемый результат за конечное число шагов**. Можно сказать, что компьютерная программа – это один из способов реализации понятия алгоритма, а язык программирования – средство описания алгоритмов. Однако в определении алгоритма не говорится, над чем производятся действия., выполняемые в нем. В принципе, это могут быть управляемые объекты внешней среды, но тогда они тоже входят в состав понятия алгоритм.
 
-![рис.1.1. Структурная схема компьютерной программы](../../images/011-01.gif)
+![рис.1.1. Структурная схема компьютерной программы](../../images/011-01.png)
 
 Компьютерная программа, в отличие от абстрактного алгоритма, имеет собственные элементы, над которыми она совершает действия, и которые являются ее составной частью. Это – данные. Таким образом, она представляет собой замкнутую систему, отделенную от внешней среды. Посмотрим, из каких еще частей состоит компьютерная программа. Все они должны выражаться в соответствующих компонентах языка программирования:
 
