--- a/content/book/1/1.2.md
+++ b/content/book/1/1.2.md
@@ -20,7 +20,7 @@ metaDescription: 'This is the meta description for this page'
 
 Основу компьютерной архитектуры составляет **прямо адресуемая память.** Она представляет собой множество элементарных ячеек памяти \(массив\), номера которых называются **адресами.**
 
-![Рис. 12-1. Организация памяти компьютера](../../.gitbook/assets/012-01.gif)
+![Рис. 12-1. Организация памяти компьютера](./assets/012-01.png)
 
 Все данные представляются в двоичной системе счисления в виде **машинных слов –** наборов двоичных разрядов. Минимальный размер машинного слова для хранения, обработки и передачи данных – 8 разрядов \(1 байт\). Все остальные слова кратны ему. **Стандартное машинное слово** имеет разрядность, соответствующую разрядности процессора \(32 разряда или 4 байта\). Для представления содержимого машинных слов используется эквивалент двоичный системы - шестнадцатеричная \(подробнее см. **1.3**\). В дальнейшем описании мы будем применять более привычные десятичные значения, не забывая, что в реальности имеем дело с двоичными \(шестнадцатеричными\) эквивалентами.
 
@@ -32,7 +32,7 @@ metaDescription: 'This is the meta description for this page'
 
 В процессоре сегментация поддерживается при помощи регистров двух видов. **Базовый регистр сегмента** содержит его начальный адрес. Регистры, работающие с данными сегмента, содержат относительный адрес данных от начала сегмента, или **смещение.** Результирующий адрес получается путем сложения содержимого этих регистров. Таким образом, каждый сегмент имеет собственную «систему координат», связанную с его началом. Если программа использует только сегментную адресацию, то сегменты можно перемещать по памяти при сохранении работоспособности программы: достаточно перенастроить соответствующие им базовые регистры.
 
-![Рис. 12-2. Сегментация программы](../../.gitbook/assets/012-02.gif)
+![Рис. 12-2. Сегментация программы](./assets/012-02.png)
 
 Выполняемая программа состоит из нескольких сегментов. Некоторые из них создаются при трансляции, другие – при загрузке и при работе программы. В принципе, программа может иметь несколько сегментов одного вида.
 
@@ -52,7 +52,7 @@ metaDescription: 'This is the meta description for this page'
 
 - программный код – последовательность **команд,** размещенная в сегменте команд \(**CS**\), на начало которого ссылается одноименный регистр процессора;
 
-![Рис. 12-3. Внутреннее представление программы](../../.gitbook/assets/012-03.gif)
+![Рис. 12-3. Внутреннее представление программы](./assets/012-03.png)
 
 - каждая команд имеет в сегменте свой относительный адрес \(от его начала\), регистр процессора **IP** **\(Instruction Pointer\)** содержит адрес очередной выполняемой команды. В программировании на языках высокого уровня с **IP** ассоциируется очень важное понятие – **текущая точка выполнения программы;**
 - команда представляет собой машинное слово, обычно переменной длины, и состоит из нескольких полей. Обязательным полем является **код операции,** который указывает на выполняемое командой действие. Совокупность команд процессора называется **системой команд.** В системе команд обязательно присутствуют следующие виды операций:
