--- a/content/book/1/1.5.md
+++ b/content/book/1/1.5.md
@@ -33,7 +33,7 @@ metaDescription: 'This is the meta description for this page'
 Принцип вложенности и структурированные блок-схемы
 Управляющие конструкции языка являются структурированными, если эквивалентная им блок-схема имеет один вход и один выход. Тогда ее можно представить как элементарное действие в конструкции более высокого уровня. Возникает «матрешка», в которой логическая и синтаксическая вложенность операторов идентичны друг другу: каждый оператор «не выходит за рамки», т.е. не передает управления вне той синтаксической конструкции, в которую он вписан. Блок-схема, состоящая из таких структурированных конструкций, также является структурированной. В структурированной блок-схеме элемент-прямоугольник «действие» может содержать как элементарное действие (выражение, простой оператор), так и вложенную управляющую конструкцию.
 
-Рис.15.1. Структурированные конструкции и блок-схема
+![Рис.15.1. Структурированные конструкции и блок-схема](./assets/015-01.png)
 
 Принцип вложенности и операторы перехода. Группа операторов перехода (goto, continue, break, return, throw) также могут быть синтаксически вложенными, т.е. являться составной частью (действием) операторов более высокого уровня. Но при этом логическая вложенность (структурированность) не соблюдается: оператор «выводит» поток управления за пределы той конструкции, в которую он вписан (см.ниже). Все остальные виды управляющих конструкций (последовательность, ветвление и цикл) являются структурированными.
 
@@ -46,7 +46,7 @@ for (i=0; A[i]!=0 && i<n; i++); // Цикл с пустым оператором
 
 Управляющая конструкция - линейная последовательность действий является основной в языках программирования, но в синтаксисе она, как правило, задается неявно. Банальность, о которой даже неудобно говорить, звучит так: последовательно записанные действия одного уровня выполняются последовательно.
 
-Рис.15.2. Линейная последовательность операторов
+![Рис.15.2. Линейная последовательность операторов](./assets/015-02.png)
 
 В соответствии с принципом вложенности элементами последовательности могут быть не только элементарные действия (простые операторы), но и вложенные синтаксические конструкции, которые на текущем уровне также выполняются последовательно друг за другом.
 
@@ -73,7 +73,7 @@ A[i+1]=c;
 Условные операторы
 Единственный условный оператор имеет две разновидности: с else и без него.
 
-Рис.15.3. Условный оператор
+![Рис.15.3. Условный оператор](./assets/015-03.png)
 
 В качестве условия выступает выражение, которое может иметь любой целый результат и интерпретируется в соответствии с принятыми в Си соглашениями о логических значениях: 0 –«ложь», не 0 – «истина». Круглые скобки являются частью синтаксиса (потому что отсутствует другой ограничитель выражения, например ключевое слово then). Действует он как и во всех языках программирования: если значение выражения есть «истина», то выполняется первый оператор, если «ложь» - второй (после else). Конструкция является структурированной, обе ветви – прямая и альтернативная – «сливаются» в одну
 
@@ -81,7 +81,7 @@ A[i+1]=c;
 
 В Си имеется три вида циклических конструкций. Общее у них одно: все условия в них являются условиями продолжения, то есть циклы продолжаются, пока значение этих условных выражений – «истина». Операторы цикла состоят из заголовка, в котором определяется характер циклического процесса и оператора - тела цикла. Скобки в заголовке цикла являются неотъемлемым элементом синтаксиса языка. Первые два вида циклов отличаются временем проверки условия продолжения - до или после очередного шага цикла:
 
-Рис.15.4. Цикл с пред- и постусловием.
+![Рис.15.4. Цикл с пред- и постусловием.](./assets/015-04.png)
 
 Наиболее универсальный цикл for имеет полный эквивалент в цикле while, поэтому его блок-схему можно и не приводить.
 
