--- a/content/book/1/1.7.md
+++ b/content/book/1/1.7.md
@@ -75,7 +75,7 @@ metaDescription: 'This is the meta description for this page'
 
 Назначение заголовочных файлов заключается в том, что содержащиеся в них объявления позволяют сформировать правильный программный код для обращения к объекту языка, который определен в другом модуле (следовательно, его внутреннее представление находится в другом объектном модуле). Для обращения к такому внешнему объекту необходимо подключить соответствующий заголовочный файл с его объявлением директивой include. То же самое касается данных и функций, содержащихся в библиотеках и библиотечных классах.
 
-рис. 17.1. Модульное проектирование на «классическом» Си
+![рис. 17.1. Модульное проектирование на «классическом» Си](./assets/017-01.png)
 
 Препроцессор
 Собственно говоря, препроцессор не имеет никакого отношения к языку. Это предварительная фаза трансляции, которая выполняет обработку текста программы, не вдаваясь глубоко в ее содержание. Он производит замену одних частей текста на другие, при этом сама программа так и остается в исходном виде. В языке Си директивы препроцессора оформлены отдельными строками программы, которые начинаются с символа "#". Здесь мы рассмотрим наиболее простые и популярные.
