--- a/content/book/1/1.8.md
+++ b/content/book/1/1.8.md
@@ -1,12 +1,14 @@
 ---
 title: '1.8. Если все сразу'
-metaTitle: 'Syntax Highlighting is the meta title tag for this page'
+metaTitle: '1.8. Если все сразу'
 metaDescription: 'This is the meta description for this page'
 ---
 
 «При трогании с места на ровном участке дороги в безветренную погоду необходимо преодолеть лишь силу сопротивления качению колес и силу инерции». С.Сабодахо. За рулем легкового автомобиля.
 
 С чего начать практическое программирование на не вполне знакомом языке? Можно со справочника: идентификаторы, константы, служебные слова. Скучно. Можно с примера: написать бесполезную программу из одного оператора, выводящего «Hello, world», а затем долго ее обсуждать. Поступим по-другому. В следующей главе мы будем заниматься анализом и проектированием простых программ. Попробуем представить одну из них в «товарном виде» - в виде готового консольного приложения, и сказать все, или почти все, о ее составных частях.
+
+![](./assets/018-01.png)
 
 Программа нарочно построена «без единого гвоздя», то есть без единого комментария, поскольку на первый раз их потребуется слишком много и малая их часть проблемы не решит. Попробуем разобрать эту программу сначала «чисто синтаксически», а затем по содержанию выполняемых действий.
 
@@ -45,6 +47,8 @@ metaDescription: 'This is the meta description for this page'
 7.       операция ++ увеличивает значение переменной на 1. Ее результатом является значение переменной до увеличения (в данном примере не используется);
 
 8.       Вызов функции также является операцией, имеющей синтаксис имя_функции(). Результат функции (если он не типа void) может быть использован в качестве операнда в той части выражения, где производится ее вызов.
+
+![](./assets/018-02.png)
 
 Шаг 4. Вызов стандартных функций ввода-вывода. Подробное описание форматированного ввода-вывода приводится в 4.5. Здесь же прокомментируем только то, что встречается в программе:
 
