--- a/content/book/1/1.6.md
+++ b/content/book/1/1.6.md
@@ -10,7 +10,7 @@ metaDescription: 'This is the meta description for this page'
 
 Синтаксис функций \(определения и вызова\) включает в себя до десятка терминов и определений, поэтому придется сначала договориться о терминологии, не вникая в суть, а затем обсуждать механизмы ее работы.
 
-![рис. 16.1. Синтаксис определения и вызова функции](../../.gitbook/assets/016-01.gif)
+![рис. 16.1. Синтаксис определения и вызова функции](./assets/016-01.png)
 
 Функция состоит из заголовка \(**1**\) и тела \(**2**\). **Заголовок функции –** это ее интерфейсная \(описательная\) часть, которая не дает программного кода, а содержит описание входных и выходных параметров, необходимых при ее выполнении \(вызове\). **Тело функции –** это программный код \(блок\), ограниченный фигурными скобками. Тело функции при трансляции преобразуется во внутреннее \(двоичное\) представление и размещается в сегменте команд программы \(см.**1.2**\). Существует также синтаксис, в котором присутствует только заголовок, ограниченный символом «**;**». В этом случае речь идет об **объявлении** функции – информировании транслятора о ее наличии и интерфейсе.
 
@@ -93,7 +93,7 @@ void main(int narg, char *argv[]) {...}  // с интерфейсом коман
 
 4. в соответствии со списком фактических параметров устанавливается соответствие между элементами контекста вызывающей функции и формальными параметрами;
 
-![](../../.gitbook/assets/016-02.gif)
+![](./assets/016-02.png)
 
 5. формальный параметр – массив **A** передается по ссылке - отображается на фактический параметр, аналогичный массив **B**, определенный в контексте вызывающей функции;
 
