Icons: Select icon through "name" prop.

--- a/content/book/1/1.1.md
+++ b/content/book/1/1.1.md
@@ -35,13 +35,13 @@ metaDescription: "This is the meta description for this page"
 - набор операторов, определяющих различные варианты порядка выполнения выражений в программе \(последовательность, условие, повторение, блок\);
 - средства разбиения программы на независимые части – модули \(функции, процедуры\), взаимодействующие между собой через программные интерфейсы.
 
-&nbsp;<YinAndYang/> Определение программы уже давно дано в простой формуле: **«Программа = алгоритм + данные»**. Но в ней алгоритм и данные не просто «складываются» в одно целое как независимые части, но являются двумя взаимозависимыми элементами. Это своего рода «Янь и Инь» программы, олицетворяющие единство и борьбу двух противоположных начал \(в философии этот принцип положен в основу диалектики – учения о развитии\). Попробуем привести несколько аналогий, поясняющих сущность взаимодействий в этой «парочке»:
+&nbsp;<Icon name="YinAndYang"/> Определение программы уже давно дано в простой формуле: **«Программа = алгоритм + данные»**. Но в ней алгоритм и данные не просто «складываются» в одно целое как независимые части, но являются двумя взаимозависимыми элементами. Это своего рода «Янь и Инь» программы, олицетворяющие единство и борьбу двух противоположных начал \(в философии этот принцип положен в основу диалектики – учения о развитии\). Попробуем привести несколько аналогий, поясняющих сущность взаимодействий в этой «парочке»:
 
 - если данные можно в какой-то мере обладают свойствами пространства \(объем, протяженность\), то алгоритм – свойствами времени \(эффективность, быстродействие\). Тезис «проигрывая в пространстве, выигрываем во времени» здесь также уместен: эффективность программ может быть принципиально повышена за счет использования дополнительных структур данных в памяти;
 - cинтаксически данные являются аналогом существительных \(объектов, над которыми производятся действия\), набор операций – аналогом глаголов \(выполняемых действий\). Программа в целом аналогично предложению, описывающему процесс – последовательность действий над заданными предметами с целью получения результата
 
 Взаимосвязь алгоритма и данных в программе не является простой и линейной. Процесс выполнения любой программы можно рассматривать с двух точек зрения: как последовательность выполнения операций \(команд\), в которых содержится информация об операндах \(данных\), которые они обрабатывают – **поток команд \(поток управления\).** С другой стороны – любой элемент данных можно рассматривать как результат выполнения действий над исходными данными и как источник данных \(операнд\) для последующих результатов. Т.е. в программе также присутствует логическая последовательность вычислений \(преобразований данных\), называемая **потоком данных.** Исторически сложилось, что в традиционной \(фон Неймановской\) архитектуре в программе в явном виде задается последовательность команд, т.е. программа выглядит как **поток управления,** в котором алгоритмическая компонента является первичной \(ведущей\), а данные – вторичной \(ведомой\).
 
-&nbsp;<YinAndYang/> Для начинающего программиста непривычным является «программный эгоцентризм»: ввод-вывод инициализируется не пользователем, а программой, которая является активной компонентой и инициатором диалога. Т.е. не пользователь ведет диалог с программой, а программа запрашивает у него необходимые данные. Другое дело, что «правильные» программные системы работают в режиме «всегда готов», но очевиден и другой факт: если программа не требует ввода, а «крутится где-то в другом месте», то принудить ее в приему данных ничем нельзя.
+&nbsp;<Icon name="YinAndYang"/> Для начинающего программиста непривычным является «программный эгоцентризм»: ввод-вывод инициализируется не пользователем, а программой, которая является активной компонентой и инициатором диалога. Т.е. не пользователь ведет диалог с программой, а программа запрашивает у него необходимые данные. Другое дело, что «правильные» программные системы работают в режиме «всегда готов», но очевиден и другой факт: если программа не требует ввода, а «крутится где-то в другом месте», то принудить ее в приему данных ничем нельзя.
 
-&nbsp;<Smile/> Уравнение «Программа = алгоритм + данные» можно разрешить и по-другому: «Алгоритм = программа - данные», что также имеет некоторый смысл, несмотря на явную натяжку. Например, **конечный автомат \(**см**.3.8\)** как раз и является программой, лишенной данных, т.е. алгоритмической компонентой, взаимодействующей с внешней средой без сохранения результатов во внутренних данных. Также и «Данные = программа - алгоритм» определяют их как пассивную программную систему, лишенную действий.
+&nbsp;<Icon name="Smile"/> Уравнение «Программа = алгоритм + данные» можно разрешить и по-другому: «Алгоритм = программа - данные», что также имеет некоторый смысл, несмотря на явную натяжку. Например, **конечный автомат \(**см**.3.8\)** как раз и является программой, лишенной данных, т.е. алгоритмической компонентой, взаимодействующей с внешней средой без сохранения результатов во внутренних данных. Также и «Данные = программа - алгоритм» определяют их как пассивную программную систему, лишенную действий.
