--- a/content/book/4/4.4.md
+++ b/content/book/4/4.4.md
@@ -7,7 +7,8 @@ metaDescription: '4.4. Символы. Строки. Текст'
 Любой язык программирования содержит средства представления и обработки текстовой информации. Другое дело, что обычно программист наряду с символами имеет дело с типом данных (формой представления) – строкой, причем особенности ее организации скрыты, а для работы предоставлен стандартный набор функций. В Си, наоборот, форма представления строки является открытой, а программист работает с ней «на низком уровне».
 
 ## Представление символов и строк в Си
-HistoryIcon **Немного истории.** Символы и строки в Си реализованы в соответствии со сложившимися  в 70-годы прошлого века стандартами представления текста. Тогдашний уровень технологии привел к тому, что в качестве единицы представления символа был выбран байт, информационная емкость которого равно **2^8=256**. Это означает, что одновременно в программе можно представить не более 256 различных символов. Этого  хватает для стандартного набора символов и букв латинского алфавита. Для прочих символов (кириллица, национальные алфавиты, псевдо-графика, математические) используются различные **кодовые таблицы**, работа с которыми не включена в стандарты языка (т.е. попросту не оговаривается в нем). Аналогично, имеются различные варианты представления символа «конец строки» в различных ОС, что создает проблемы, связанные с переносом текстовых файлов.
+
+&nbsp;<Icon name="Story"/> **Немного истории.** Символы и строки в Си реализованы в соответствии со сложившимися  в 70-годы прошлого века стандартами представления текста. Тогдашний уровень технологии привел к тому, что в качестве единицы представления символа был выбран байт, информационная емкость которого равно **2^8=256**. Это означает, что одновременно в программе можно представить не более 256 различных символов. Этого  хватает для стандартного набора символов и букв латинского алфавита. Для прочих символов (кириллица, национальные алфавиты, псевдо-графика, математические) используются различные **кодовые таблицы**, работа с которыми не включена в стандарты языка (т.е. попросту не оговаривается в нем). Аналогично, имеются различные варианты представления символа «конец строки» в различных ОС, что создает проблемы, связанные с переносом текстовых файлов.
 
 _Примечание_. Исторически сложившееся «рыночное разнообразие» на момент появления стандарта привело к тому, что имеются несколько кодовых таблиц, представляющих кириллицу:
 
